--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,14 +14,14 @@ stages:
 build-linux:
   <<: *build-conda
   script:
-    - conda build ./conda/camera --prefix-length=80 --output-folder=dist/ --channel=http://bcu-ci.esrf.fr/stable
+    - conda build ./conda/camera --output-folder=dist/ --channel=http://bcu-ci.esrf.fr/stable
   tags:
-    - linux
+    - cos7
 
 build-win:
   <<: *build-conda
   script:
-    - conda build ./conda/camera --prefix-length=80 --output-folder=dist/ --channel=http://bcu-ci.esrf.fr/stable
+    - conda build ./conda/camera --output-folder=dist/ --channel=http://bcu-ci.esrf.fr/stable
   tags:
     - win
 
@@ -29,7 +29,7 @@ build-noarch:
   <<: *build-conda
   stage: build-noarch
   script:
-    - conda build ./conda/tango --prefix-length=80 --output-folder=dist/ -c tango-controls --channel=http://bcu-ci.esrf.fr/stable
+    - conda build ./conda/tango --output-folder=dist/ -c tango-controls --channel=http://bcu-ci.esrf.fr/stable
   dependencies:
     - build-linux
     - build-win
