--- a/conda/camera/meta.yaml
+++ b/conda/camera/meta.yaml
@@ -17,7 +17,7 @@ build:
 
 requirements:
   host:
-    - python
+    - python {{ python }}
     - sip 4.19.8              # For compatibility with pyqt 5.9.2
     - lima-core
     - pylon6-sdk
@@ -27,7 +27,7 @@ requirements:
     - ninja
     - {{ compiler('cxx') }}
   run:
-    - python
+    - python {{ python }}
     - sip >=4.19.4, <=4.19.8  # For compatibility with pyqt 5.9.2
     - {{ pin_compatible('lima-core', max_pin='x.x') }}
     - {{ pin_compatible('numpy',max_pin='x') }} 
