fix scout issue with framrate range reading when framerate is disable

--- a/conda/tango/meta.yaml
+++ b/conda/tango/meta.yaml
@@ -20,7 +20,7 @@ requirements:
   build:
     - ninja
     - cmake
-    - lima-core
+    - lima-core 1.9
   run:
     - lima-tango-server
     - lima-camera-basler
