pinned on lima-core 1.10 and added python 3.10

--- a/conda/tango/meta.yaml
+++ b/conda/tango/meta.yaml
@@ -20,10 +20,10 @@ requirements:
   build:
     - ninja
     - cmake
-    - lima-core 1.9
+    - lima-core
   run:
     - lima-tango-server
-    - lima-camera-basler
+    - lima-camera-basler {{ version }}
 
 about:
   home: https://github.com/esrf-bliss/Lima
