Fix tango package not properly installing in site-packages

--- a/conda/tango/meta.yaml
+++ b/conda/tango/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - cmake
     - lima-core
   run:
+    - python
     - lima-tango-server
     - lima-camera-basler {{ version }}
 
