--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,14 +14,14 @@ stages:
 build-linux:
   <<: *build-conda
   script:
-    - conda mambabuild ./conda/camera --output-folder=dist/ --channel=http://bcu-ci.esrf.fr/stable
+    - conda mambabuild ./conda/camera --output-folder=dist/ -c conda-forge --channel=http://bcu-ci.esrf.fr/stable
   tags:
     - linux
 
 build-win:
   <<: *build-conda
   script:
-    - conda mambabuild ./conda/camera --output-folder=dist/ --channel=http://bcu-ci.esrf.fr/stable
+    - conda mambabuild ./conda/camera --output-folder=dist/ -c conda-forge --channel=http://bcu-ci.esrf.fr/stable
   tags:
     - win
 
@@ -29,7 +29,7 @@ build-noarch:
   <<: *build-conda
   stage: build-noarch
   script:
-    - conda mambabuild ./conda/tango --output-folder=dist/ --channel=http://bcu-ci.esrf.fr/stable
+    - conda mambabuild ./conda/tango --output-folder=dist/ -c conda-forge --channel=http://bcu-ci.esrf.fr/stable
   dependencies:
     - build-linux
     - build-win
@@ -47,7 +47,7 @@ deploy-devel:
     - build-noarch
   script:
     - cp -Rf dist/* /conda-devel/
-    - conda index /conda-devel/
+    - conda index --channeldata /conda-devel/
   tags:
     - conda
     - linux
@@ -68,7 +68,7 @@ deploy-stable:
     - build-noarch
   script:
     - cp -Rf dist/* /conda/
-    - conda index /conda/
+    - conda index --channeldata /conda/
   tags:
     - conda
     - linux
