--- a/conda/camera/meta.yaml
+++ b/conda/camera/meta.yaml
@@ -18,8 +18,8 @@ build:
 requirements:
   host:
     - python {{ python }}
-    - sip 4.19* # API v12.7
-    - lima-core 1.10*
+    - lima-sip6  13
+    - lima-core 1.11*
     - pylon6-sdk
   build:
     - cmake
@@ -27,7 +27,7 @@ requirements:
     - {{ compiler('cxx') }}
   run:
     - python
-    - {{ pin_compatible('sip', min_pin='x.x.x', max_pin='x') }}
+    - {{ pin_compatible('lima-sip6', min_pin='x.x.x', max_pin='x') }}
     - {{ pin_compatible('lima-core', min_pin='x.x', max_pin='x.x') }}
     - pylon6-sdk
 
@@ -35,7 +35,7 @@ test:
   requires:
     - cmake
   imports:
-    - Lima.Basler
+    - lima.basler
   commands:
     - cmake --version
     - ctest --version
