--- a/conda/tango/meta.yaml
+++ b/conda/tango/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - lima-core
   run:
     - python
-    - lima-tango-server
+    - lima-tango-server >=1.12*
     - lima-camera-basler {{ version }}
 
 about:
